config/certs/templates/acme-challenge-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: cert-manager-acme-challenge-kubermatic-all
spec:
  rules:
  - http:
      paths:
      # there must always be at least one path defined for an Ingress
      - path: /.really-not-used
        backend:
          serviceName: does-not-exist
          servicePort: does-not-exist
